--- a/vanilla-typescript-tsc/package.json
+++ b/vanilla-typescript-tsc/package.json
@@ -2,14 +2,15 @@
     "private": true,
     "main": "dist/index.js",
     "scripts": {
-        "start": "ttsc && node dist/index.js"
+        "prepare": "ts-patch install -s",
+        "start": "tspc && node dist/index.js"
     },
     "author": "Roman Jámbor",
     "license": "MIT",
     "devDependencies": {
         "tst-reflect-transformer": "1.0.0-alpha.10",
-        "ttypescript": "^1.5.15",
-        "typescript": "^4.9.5"
+        "ts-patch": "^3.0.1",
+        "typescript": "^5.1.6"
     },
     "dependencies": {
         "hyper-express": "^6.5.5",
